--- a/Google2/google.html
+++ b/Google2/google.html
@@ -21,7 +21,7 @@
           <p>Gmail</p>
           <p>Images</p>
           <svg class="gb_6e" focusable="false" viewBox="0 0 24 24"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg> <!--Pris depuis la page google / Inspecté-->
-          <p class="user"><i class="fas fa-microphone"></i></p> <!--https://fontawesome.com/-->
+          <p class="user"><i class="fas fa-user-circle"></i></p> <!--https://fontawesome.com/-->
         </div>
       </header> 
 
@@ -39,6 +39,13 @@
             <button>J'ai de la chance</button>
         </div>
 
+        <div class="visite">
+            Visitez ce <a href="https://www.youtube.com/watch?v=QH2-TGUlwu4">troll</a>
+        </div>
+
+        <div class="anglais">
+            <i>Google Disponible en : </i><a href="https://www.google.com/setprefs?sig=0_LRe3NuMV6LEG4HBVJ2Q6YfQuVkA%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwiXrNme5LT6AhWW0YUKHbdyBuQQ2ZgBCBE">English</a>
+        </div>
 
       </section>
 
